Style(universe): Prepare the new section for articles

--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -38,7 +38,7 @@
         align-content: space-between;
         justify-content: center;
         max-width: 1260px;
-        border: 10px double $light-secondary-color;
+        //border: 10px double $light-secondary-color;
 
         .fact-container {
             width: 250px;
