--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -40,6 +40,7 @@
       </map>
     </div>
   </div>
+  <div separator></div>
   <div container padding-vert class="list-facts-container">
     <div *ngFor="let fact of listFacts | slice:1" class="fact-container" routerLink="/universe/{{fact.id}}">
       <img class="fact-image" src="https://via.placeholder.com/500x200" alt="">
