Feat(universe): add the differents pages of the section

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,10 +9,10 @@
 </nav>
 <nav class="header-subnav" *ngIf="route == 'universe'">
   <a class="header-subtitle" routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.MAIN' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/1" [innerHtml]="'HEADER.UNIVERSE.SECTION01' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/2" [innerHtml]="'HEADER.UNIVERSE.SECTION02' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/3" [innerHtml]="'HEADER.UNIVERSE.SECTION03' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/4" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
+  <a routerLinkActive="active" routerLink="universe/faradel" [innerHtml]="'HEADER.UNIVERSE.SECTION01' | translate | uppercase"></a>
+  <a routerLinkActive="active" routerLink="universe/jirakan" [innerHtml]="'HEADER.UNIVERSE.SECTION02' | translate | uppercase"></a>
+  <a routerLinkActive="active" routerLink="universe/celestia" [innerHtml]="'HEADER.UNIVERSE.SECTION03' | translate | uppercase"></a>
+  <a routerLinkActive="active" routerLink="universe/zones" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
 </nav>
 <nav class="header-subnav" *ngIf="route == 'roleplay'">
   <a class="header-subtitle" routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
