--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,7 +7,7 @@
     position: relative;
 
     height: 50px;
-    background-color: $default-color;
+    background-color: $dark-color;
 
     .header-nav {
       position: absolute;
