--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
 $light-color: #EEEEEE;
-$default-color: #000000;
+$dark-color: #1A1A10;
 
 $dark-primary-color: #134457;
 $primary-color: #247899;
 $light-primary-color: #7ADAFF;
 
 $secondary-color: #D4CA88;
-$light-secondary-color: #FFEB94;
+$light-secondary-color: #FFFBA4;
