--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -42,7 +42,7 @@
             .logo-image {
                 height: 100px;
                 width: 250px;
-                border: 1px solid black;
+                border: 1px solid $dark-color;
             }
         }
     }
