--- a/src/app/pages/universe/zones/zones.component.scss
+++ b/src/app/pages/universe/zones/zones.component.scss
@@ -30,7 +30,7 @@
             .logo-image {
                 height: 100px;
                 width: 250px;
-                border: 1px solid black;
+                border: 1px solid $dark-color;
             }
         }
     }
