--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,11 +4,11 @@ body {
   color: $light-color;
   background-color: $dark-primary-color;
   background-image: linear-gradient(to right,
-  rgba($default-color,1),
-  rgba($default-color,0),
-  rgba($default-color,0),
-  rgba($default-color,0),
-  rgba($default-color,1));
+  rgba($dark-color,1),
+  rgba($dark-color,0),
+  rgba($dark-color,0),
+  rgba($dark-color,0),
+  rgba($dark-color,1));
 }
 
 h1 {
