--- a/src/app/pages/universe/faradel/faradel.component.scss
+++ b/src/app/pages/universe/faradel/faradel.component.scss
@@ -5,8 +5,8 @@
     .head-container {
         position: relative;
         height: 400px;
-        border-bottom: 10px double $secondary-color;
-        box-shadow: 0 -175px 200px $dark-color inset;
+        border-bottom: 5px solid $secondary-color;
+        box-shadow: 0 -150px 200px $dark-color inset;
 
         .title-background {
             position: absolute;
@@ -28,6 +28,7 @@
             font-size: 70px;
             text-align: center;
             transform: translateX(-50%) translateY(100%);
+            color: $light-secondary-color;
         }
 
         .title-logo {
@@ -47,12 +48,14 @@
         align-content: space-between;
         justify-content: center;
         max-width: 1260px;
+        margin-top: 6px;
+        border-top: 1px solid $light-secondary-color;
 
         .fact-container {
             position: relative;
             height: 300px;
             width: 250px;
-            border: 1px solid $secondary-color;
+            border: 1px solid $light-secondary-color;
             color: $secondary-color;
             background-color: $dark-color;
 
@@ -65,7 +68,7 @@
               margin-top: 0;
               margin-bottom: 0;
               height: 320px;
-              box-shadow: 0px 0px 0px 3px $secondary-color;
+              box-shadow: 0px 0px 0px 2px $light-secondary-color;
             }
 
             &:hover .fact-text {
