--- a/src/app/pages/universe/jirakan/jirakan.component.html
+++ b/src/app/pages/universe/jirakan/jirakan.component.html
@@ -1,15 +1,16 @@
 <div style="text-align:center">
-  <div container padding-vert class="head-container">
+  <div padding-vert class="head-container">
     <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
-    <h2>{{ 'UNIVERSE.JIRAKAN.TITLE' | translate }}</h2>
+    <img class="title-logo" src="https://via.placeholder.com/200x200" alt="">
+    <h1 class="title-container">{{ 'UNIVERSE.JIRAKAN.TITLE' | translate | uppercase }}</h1>
   </div>
-  <div separator></div>
-  <div container padding-vert class="list-facts-container">
+  <div padding-vert container class="list-facts-container">
     <div *ngFor="let fact of listFacts" class="fact-container" routerLink="universe">
-      <img class="fact-image" src="https://via.placeholder.com/500x200" alt="">
-      <h2>{{ fact.title }}</h2>
-      <h3>{{ fact.type }}</h3>
-      <p>{{ fact.description }}</p>
+      <img class="fact-image" src="https://via.placeholder.com/500x300" alt="">
+      <div class="fact-text">
+        <h2 class="fact-title">{{ fact.title | uppercase }}</h2>
+        <p>{{ fact.description }}</p>
+      </div>
     </div>
   </div>
 </div>
