--- a/src/app/pages/universe/universe.component.scss
+++ b/src/app/pages/universe/universe.component.scss
@@ -5,8 +5,11 @@
     .head-container {
         display: flex;
         position: relative;
+        border-bottom: 5px solid $secondary-color;
+        box-shadow: 0 -150px 200px $dark-color inset;
 
         .map-left {
+          min-height: 350px;
           width: 30%;
           text-align: left;
           padding-left: 5%;
@@ -33,34 +36,56 @@
     }
 
     .list-facts-container {
-        display: flex;
-        flex-wrap: wrap;
-        align-content: space-between;
-        justify-content: center;
-        max-width: 1260px;
-        //border: 10px double $light-secondary-color;
+      display: flex;
+      flex-wrap: wrap;
+      align-content: space-between;
+      justify-content: center;
+      max-width: 1260px;
+      margin-top: 6px;
+      border-top: 1px solid $light-secondary-color;
 
-        .fact-container {
+      .fact-container {
+          position: relative;
+          height: 300px;
+          width: 250px;
+          border: 1px solid $light-secondary-color;
+          color: $secondary-color;
+          background-color: $dark-color;
+
+          margin: 10px;
+          overflow: hidden;
+          cursor: pointer;
+          transition: .5s;
+
+          &:hover {
+            margin-top: 0;
+            margin-bottom: 0;
+            height: 320px;
+            box-shadow: 0px 0px 0px 2px $light-secondary-color;
+          }
+
+          &:hover .fact-text {
+            top: 150px;
+          }
+
+          .fact-image {
+            position: absolute;
             width: 250px;
-            height: 300px;
-            border: 1px solid $secondary-color;
-            border-radius: 10px;
-            color: $dark-primary-color;
-            background-color: $light-color;
+            top: 0;
+            left: 0;
+          }
 
-            margin: 10px;
-            overflow: hidden;
-            cursor: pointer;
+          .fact-text {
+            position: absolute;
+            height: 200px;
+            top: 100px;
+            background-color: $dark-color;
             transition: .5s;
 
-            &:hover {
-                box-shadow: 0px 0px 0px 3px $secondary-color;
+            .fact-title {
+              color: $light-secondary-color;
             }
-
-            .fact-image {
-                height: 100px;
-                width: 250px;
-            }
-        }
-    }
+          }
+      }
+  }
 }
