--- a/src/app/pages/universe/zones/zones.component.html
+++ b/src/app/pages/universe/zones/zones.component.html
@@ -4,6 +4,7 @@
     <img class="title-logo" src="https://via.placeholder.com/200x200" alt="">
     <h1 class="title-container">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
   </div>
+  <div separator></div>
   <div padding-vert container class="list-facts-container">
     <div *ngFor="let fact of listFacts" class="fact-container" routerLink="universe">
       <img class="fact-image" src="https://via.placeholder.com/500x300" alt="">
