--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,6 +1,7 @@
 [separator] {
-  height: 0px;
-  border-top : 1px solid $light-primary-color;
+  height: 6px;
+  border-top : 5px solid $dark-secondary-color;
+  border-bottom: 1px solid $light-secondary-color;
 }
 
 [container] {
