--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,5 +5,6 @@ $dark-primary-color: #134457;
 $primary-color: #247899;
 $light-primary-color: #7ADAFF;
 
-$secondary-color: #B4AA68;
-$light-secondary-color: #FFFBA4;
+$dark-secondary-color: #CAC080;
+$secondary-color: #D0CAAA;
+$light-secondary-color: #FAF0A0;
