--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,7 +7,7 @@
     .footer-infos {
         display: flex;
         height: 250px;
-        border-top: 1px solid $secondary-color;
+        border-top: 1px solid $dark-secondary-color;
 
         .footer-left {
             position: relative;
@@ -48,7 +48,7 @@
             position: relative;
             width: 50%;
             margin: 25px 0;
-            border-left: 1px solid $secondary-color;
+            border-left: 1px solid $dark-secondary-color;
         }
 
         ul {
@@ -80,7 +80,7 @@
                     span {
                         position: absolute;
                         transition: transform 0.5s;
-                        background-color: $secondary-color;
+                        background-color: $dark-secondary-color;
                     }
 
                     span:nth-child(1), span:nth-child(3) {
@@ -153,7 +153,7 @@
         justify-content: space-between;
 
         height: 50px;
-        border-top: 1px solid $secondary-color;
+        border-top: 1px solid $dark-secondary-color;
 
         a {
             display: inline-block;
