--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -39,7 +39,7 @@
         left: 0;
         height: 3px;
         width: 100%;
-        background: $secondary-color;
+        background: $dark-secondary-color;
 
         transform: scaleX(0);
 
@@ -67,7 +67,7 @@
       margin-right: 10px;
       font-size: 16px;
       color: $light-secondary-color;
-      border-right: 1px solid $secondary-color;
+      border-right: 1px solid $dark-secondary-color;
     }
 
     .header-section {
