Feat(universe): Prepare the new sections : crystals, religion and population

--- a/src/app/pages/universe/universe.component.html
+++ b/src/app/pages/universe/universe.component.html
@@ -42,11 +42,11 @@
   </div>
   <div separator></div>
   <div container padding-vert class="list-facts-container">
-    <div *ngFor="let fact of listFacts" class="fact-container" routerLink="universe">
+    <div *ngFor="let mainFact of listMainFacts" class="fact-container" routerLink="/universe/{{mainFact.route}}">
       <img class="fact-image" src="https://via.placeholder.com/500x300" alt="">
       <div class="fact-text">
-        <h2 class="fact-title">{{ fact.title | uppercase }}</h2>
-        <p>{{ fact.description }}</p>
+        <h2 class="fact-title">{{ mainFact.title | uppercase }}</h2>
+        <p>{{ mainFact.description }}</p>
       </div>
     </div>
   </div>
