Refactor(universe): Merge all the sections into one page

--- a/src/app/pages/universe/zones/zones.component.html
+++ b/src/app/pages/universe/zones/zones.component.html
@@ -1,8 +1,8 @@
 <div style="text-align:center">
   <div padding-vert class="head-container">
-    <img class="title-background" src="https://via.placeholder.com/1000x400" alt="">
-    <img class="title-logo" src="https://via.placeholder.com/200x200" alt="">
-    <h1 class="title-container">{{ 'UNIVERSE.ZONES.TITLE' | translate | uppercase }}</h1>
+    <img class="title-background" src="{{ backgroundSrc }}" alt="">
+    <img class="title-logo" src="{{ logoSrc }}" alt="">
+    <h1 class="title-container">{{ title | uppercase }}</h1>
   </div>
   <div separator></div>
   <div padding-vert container class="list-facts-container">
