--- a/src/app/pages/universe/zones/zones.component.html
+++ b/src/app/pages/universe/zones/zones.component.html
@@ -6,7 +6,7 @@
   </div>
   <div separator></div>
   <div padding-vert container class="list-facts-container">
-    <div *ngFor="let fact of listFacts" class="fact-container" routerLink="/universe/{{fact.id}}">
+    <div *ngFor="let fact of listFacts" class="fact-container" routerLink="/universe/{{route}}/{{fact.id}}">
       <img class="fact-image" src="https://via.placeholder.com/500x300" alt="">
       <div class="fact-text">
         <h2 class="fact-title">{{ fact.title | uppercase }}</h2>
