--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,27 +1,26 @@
 <div class="header-section">
-  <img class="header-logo" src="/assets/images/logo.png" alt="" routerLink="">
-  <a class="header-title" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="" [innerHtml]="'HEADER.HOME' | translate | uppercase"></a>
+  <div class="header-main">
+    <img class="header-logo" src="/assets/images/logo.png" alt="" routerLink="">
+    <a class="header-title" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="" [innerHtml]="'HEADER.HOME' | translate | uppercase"></a>
+  </div>
+  <nav>
+    <a routerLinkActive="active" routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.MAIN' | translate | uppercase"></a>
+    <a routerLinkActive="active" routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
+    <a routerLinkActive="active" routerLink="characters" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a>
+  </nav>
 </div>
-<nav class="header-nav" *ngIf="route != 'universe' && route != 'roleplay' && route != 'characters'">
-  <a routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.MAIN' | translate | uppercase"></a>
-  <a routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
-  <a routerLink="characters" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a>
-</nav>
-<nav class="header-subnav" *ngIf="route == 'universe'">
-  <a class="header-subtitle" routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.MAIN' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/faradel" [innerHtml]="'HEADER.UNIVERSE.SECTION01' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/jirakan" [innerHtml]="'HEADER.UNIVERSE.SECTION02' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/celestia" [innerHtml]="'HEADER.UNIVERSE.SECTION03' | translate | uppercase"></a>
-  <a routerLinkActive="active" routerLink="universe/zones" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
-</nav>
-<nav class="header-subnav" *ngIf="route == 'roleplay'">
-  <a class="header-subtitle" routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
-  <!--a routerLinkActive="active" routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a-->
-</nav>
-<nav class="header-subnav" *ngIf="route == 'characters'">
-  <a class="header-subtitle" routerLink="characters" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a>
-  <!--a routerLinkActive="active" routerLink="characters" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a-->
-</nav>
-<div class="header-section section-right">
-  <a class="header-title" routerLinkActive="active" routerLink="about" [innerHtml]="'HEADER.ABOUT' | translate | uppercase"></a>
+<div class="header-subsection" [ngClass]="{'active': route == 'universe' || route == 'roleplay' || route == 'characters'}">
+  <nav class="header-subnav" *ngIf="route == 'universe'">
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe" [innerHtml]="'HEADER.UNIVERSE.SECTION00' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/faradel" [innerHtml]="'HEADER.UNIVERSE.SECTION01' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/jirakan" [innerHtml]="'HEADER.UNIVERSE.SECTION02' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/celestia" [innerHtml]="'HEADER.UNIVERSE.SECTION03' | translate | uppercase"></a>
+    <a routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" routerLink="universe/zones" [innerHtml]="'HEADER.UNIVERSE.SECTION04' | translate | uppercase"></a>
+  </nav>
+  <nav class="header-subnav" *ngIf="route == 'roleplay'">
+    <a routerLinkActive="active" routerLink="roleplay" [innerHtml]="'HEADER.ROLEPLAY' | translate | uppercase"></a>
+  </nav>
+  <nav class="header-subnav" *ngIf="route == 'characters'">
+    <a routerLinkActive="active" routerLink="characters" [innerHtml]="'HEADER.CHARACTERS' | translate | uppercase"></a>
+  </nav>
 </div>
