--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,6 +1,7 @@
 @import "../../../styles/variables.scss";
 
 :host {
+  .header-section {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -8,17 +9,6 @@
 
     height: 50px;
     background-color: $dark-color;
-
-    .header-nav {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translateX(-50%) translateY(-50%);
-    }
-
-    .header-subnav {
-      font-size: 12px;
-    }
 
     a {
       display: inline-block;
@@ -37,7 +27,7 @@
         position: absolute;
         bottom: 0;
         left: 0;
-        height: 3px;
+        height: 2px;
         width: 100%;
         background: $dark-secondary-color;
 
@@ -55,28 +45,67 @@
       }
     }
 
-    .header-logo {
-      cursor: pointer;
-    }
-
-    .header-title {
-      color: $light-secondary-color;
-    }
-
-    .header-subtitle {
-      margin-right: 10px;
-      font-size: 16px;
-      color: $light-secondary-color;
-      border-right: 1px solid $dark-secondary-color;
-    }
-
-    .header-section {
+    .header-main {
       display: flex;
       align-items: center;
 
-      &.section-right {
-        display: inline-block;
-        text-align: right;
+      .header-logo {
+        cursor: pointer;
+      }
+
+      .header-title {
+        color: $light-secondary-color;
       }
     }
+  }
+
+  .header-subsection {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: relative;
+
+    height: 40px;
+    background-color: $dark-color;
+
+    transform: translateY(-50%) scaleY(0);
+    transition: .5s;
+
+    &.active {
+      transform: translateY(0%) scaleY(1);
+    }
+
+    a {
+      display: inline-block;
+      position: relative;
+      height: 40px;
+      line-height: 40px;
+      padding: 0 15px;
+
+      &:hover {
+        color: $light-secondary-color;
+      }
+
+      &.active {
+        color: $light-secondary-color;
+      }
+    }
+
+    .header-subnav {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translateX(-50%) translateY(-50%);
+
+      text-align: center;
+      font-size: 12px;
+      width: 100%;
+
+      .header-subtitle {
+        margin-right: 10px;
+        color: $light-secondary-color;
+        border-right: 1px solid $dark-secondary-color;
+      }
+    }
+  }
 }
