--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,11 @@
-<div container padding-vert class="head-container big-head">
+<div *ngIf="selection == 'universe'" container class="head-container">
   <!--img class="title-background" src="https://via.placeholder.com/1000x550" alt=""-->
   <div class="title-container">
-      <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
-      <h1>{{ 'HOME.UNIVERSE.TITLE' | translate | uppercase }}</h1>
-      <p>{{ 'HOME.UNIVERSE.RESUME' | translate }}</p>
-      <button routerLink="universe">{{ 'HOME.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
+    <img class="logo-image" src="https://via.placeholder.com/500x200" alt="">
+    <p>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</p>
+    <h1>{{ 'HOME.UNIVERSE.TITLE' | translate | uppercase }}</h1>
+    <p>{{ 'HOME.UNIVERSE.RESUME' | translate }}</p>
+    <button routerLink="universe">{{ 'HOME.UNIVERSE.SEEMORE' | translate | uppercase }}</button>
   </div>
   <div class="glyphe-container">
     <img src="assets/images/glyphe_map_01.png" class="glyphe glyphe01" alt=""/>
@@ -14,10 +15,9 @@
     <img src="assets/images/glyphe_map_05.png" class="glyphe glyphe05 map" alt=""/>
   </div>
 </div>
-<div separator></div>
-<div container padding-vert class="head-container">
+<div *ngIf="selection == 'roleplay'" container class="head-container">
   <!--img class="title-background" src="https://via.placeholder.com/1000x400" alt=""-->
-  <div class="glyphe-container inversed-container little-container">
+  <div class="glyphe-container inversed-container">
     <img src="assets/images/glyphe_dices_01.png" class="glyphe glyphe01" alt=""/>
     <img src="assets/images/glyphe_dices_02.png" class="glyphe glyphe02" alt=""/>
     <img src="assets/images/glyphe_dices_03.png" class="glyphe glyphe03" alt=""/>
@@ -25,20 +25,21 @@
     <img src="assets/images/glyphe_dices_05.png" class="glyphe glyphe05 dices" alt=""/>
   </div>
   <div class="title-container inversed-container">
-      <h1>{{ 'HOME.ROLEPLAY.TITLE' | translate | uppercase }}</h1>
-      <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
-      <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
+    <p>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</p>
+    <h1>{{ 'HOME.ROLEPLAY.TITLE' | translate | uppercase }}</h1>
+    <p>{{ 'HOME.ROLEPLAY.RESUME' | translate }}</p>
+    <button routerLink="roleplay">{{ 'HOME.ROLEPLAY.SEEMORE' | translate | uppercase }}</button>
   </div>
 </div>
-<div separator></div>
-<div container padding-vert class="head-container">
+<div *ngIf="selection == 'characters'" container class="head-container">
   <!--img class="title-background" src="https://via.placeholder.com/1000x400" alt=""-->
   <div class="title-container">
-      <h1>{{ 'HOME.CHARACTERS.TITLE' | translate | uppercase }}</h1>
-      <p>{{ 'HOME.CHARACTERS.RESUME' | translate }}</p>
-      <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
+    <p>{{ 'PAGE.HOME.TITLE' | translate | uppercase }}</p>
+    <h1>{{ 'HOME.CHARACTERS.TITLE' | translate | uppercase }}</h1>
+    <p>{{ 'HOME.CHARACTERS.RESUME' | translate }}</p>
+    <button routerLink="characters">{{ 'HOME.CHARACTERS.SEEMORE' | translate | uppercase }}</button>
   </div>
-  <div class="glyphe-container little-container">
+  <div class="glyphe-container">
     <img src="assets/images/glyphe_book_01.png" class="glyphe glyphe01" alt=""/>
     <img src="assets/images/glyphe_book_02.png" class="glyphe glyphe02" alt=""/>
     <img src="assets/images/glyphe_book_03.png" class="glyphe glyphe03" alt=""/>
